--- a/app/templates/assignments.html
+++ b/app/templates/assignments.html
@@ -1,93 +1,89 @@
 {% extends '_layout.html' %}
 {% load static %}
 {% block title %} Assignment Management {% endblock %}
-
 {% block content %}
 <link href="{% static 'app-css/assignments.css' %}" rel="stylesheet">
-
 <div class="row" id="heading-row">
     <div class="col-sm-12 col-md-5 col-xl-8" style="padding: 1rem">
         <div>
-        <h5>Assignments</h5>
+            <h5>Assignments</h5>
+            <quote>Assignments as Stepping Stones, Exams as Peaks: Your Academic Ascent.</quote>
         </div>
     </div>
     <div class="col-sm-12 col-md-7 col-xl-4" style="padding: 1rem">
         <div class="row">
             <div class="col text-end">
-                <a class="btn btn-success rounded-pill" onclick="openForm()"><i class="bi bi-plus-circle me-2"></i> Create Assignment</a>
+                <button class="btn btn-success rounded-pill" data-bs-toggle="modal"
+                data-bs-target="#assignmentModal"><i class="bi bi-plus-circle me-2"></i>Create
+                Assignment</button>
             </div>
         </div>
     </div>
 </div>
-
-<section class="form_section bg-grey" id="assignmentForm">
-    <article class="container-fluid">
-        <div class="row">
-            <div class="col-xl-8"></div>
-            <div class="col-xl-4 form_div">
-                <div class="row">
-                    <div class="col-xl-6">
-                        <h4>Create Assignment</h4>
+ 
+<div class="modal fade" id="assignmentModal" tabindex="-1" aria-labelledby="assignmentModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content" id="assignment">
+            <div class="modal-header">
+                <h5 class="modal-title" id="assignmentModalLabel">Create Assignment</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <div class="d-flex mt-3">
+                    <div class="flex-shrink-0">
+                        <i class="ri-checkbox-circle-fill text-success"></i>
                     </div>
-                    <div class="col-xl-6 text-end">
-                        <a class="btn-close" onclick="closeForm()" aria-label="Close"></a>
+                    <div class="flex-grow-1 ms-2">
+                        <p class="text-muted mb-0">Igniting Minds, One Assignment at a Time.</p>
                     </div>
                 </div>
-                    <form class="row g-2" id="assignment-form"  method="POST" enctype="multipart/form-data">
-                        {% csrf_token %}
-                        <input type="hidden" id="id" name="id">
-                        <div class="col-md-12">
-                            <label class="form-label" for="assignment_Date">Assignment Date<span style="color: red;">*</span></label>
-                            <input type="date" class="form-control" id="assignment_Date" name="assignment_Date">
-                        </div>
-                        <div class="col-md-12">
-                            <label for="assignment_due_date" class="form-label">Assignment Due Date <span style="color: red;">*</span></label>
-                            <input type="date" class="form-control" id="assignment_due_date" name="assignment_due_date">
-                        </div>
-                        <div class="col-md-12">
-                            <label for="assignment_title" class="form-label">Assignment Title<span style="color: red;">*</span></label>
-                            <input type="text" class="form-control" id="assignment_title" name="assignment_title">
-                        </div>
-                        <div class="col-md-12">
-                            <label for="inputCity" class="form-label">Assignment Details  <span style="color: red;">*</span></label>
-                            <textarea class="form-control" id="assignment_details" name="assignment_details" placeholder="Enter Description"></textarea>
-                        </div>
-
-                        <div class="col-md-6">
-                            <label for="class_id" class="form-label">Class</label>
-                            <select id="class_id" class="form-select" name="class_id"></select>
-                        </div>
-                        <div class="col-md-6">
-                            <label for="section_id" class="form-label">Section</label>
-                            <select id="section_id" class="form-select" name="section_id" ></select>
-                        </div>
-                        <div class="col-md-6">
-                            <label class="labels">Any Specific Student ?</label>
-                            
-                            <ol id="box" class="box"></ol>
-                            <input type="text" class="form-control" id="text" placeholder="Enter Student Name">
-                        </div>
-                        <div class='col-md-6'>
-                                <button type="button" class="add-more" id="add-student" onclick="addMore()">Add Student</button>
-                            <span id="error"></span>
-                        </div>
-                        <div class="col-md-12  btn-action">
-                            <div class="d-flex justify-content-end" style="margin-top:6rem;">
-                            <a onclick="closeForm()" class="btn btn-danger rounded-pill" style="margin-right: 10px;">Cancel</a>
-                            <button type="submit" class="btn btn-success rounded-pill">Save</button>
-                        </div>
+                <input type="hidden" id="assignment_id" name="assignment_id">
+                <div class="col-md-12">
+                    <label class="form-label" for="assignment_Date">Assignment Date<span style="color: red;">*</span></label>
+                    <input type="date" class="form-control" id="assignment_Date" name="assignment_Date">
+                </div>
+                <div class="col-md-12">
+                    <label for="assignment_due_date" class="form-label">Assignment Due Date <span style="color: red;">*</span></label>
+                    <input type="date" class="form-control" id="assignment_due_date" name="assignment_due_date">
+                </div>
+                <div class="col-md-12">
+                    <label for="assignment_title" class="form-label">Assignment Title<span style="color: red;">*</span></label>
+                    <input type="text" class="form-control" id="assignment_title" name="assignment_title" minlength="1" maxlength="100">
+                </div>
+                <div class="col-md-12">
+                    <label for="inputCity" class="form-label">Assignment Details <span style="color: red;">*</span></label>
+                    <textarea class="form-control" id="assignment_details" name="assignment_details" placeholder="Enter Description" minlength="1" maxlength="1000"></textarea>
+                </div>
+                <div class="row mt-3">
+                    <div class="col-md-6">
+                        <label for="class_id" class="form-label">Class</label>
+                        <select id="class_id" class="form-select" name="class_id">
+                            <option value="" selected>Select Class</option>
+                        </select>
                     </div>
-                    </form>
+                    <div class="col-md-6">
+                        <label for="section_id" class="form-label">Section</label>
+                        <select id="section_id" class="form-select" name="section_id">
+                            <option value="" selected>Select Section</option>
+                        </select>
+                    </div>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <a href="javascript:void(0);" class="btn btn-link link-success fw-medium" data-bs-dismiss="modal">
+                    <i class="ri-close-line me-1 align-middle"></i> Close
+                </a>
+                <button type="button" class="btn btn-primary" id="btnSave" name="btnSave">Save</button>
             </div>
         </div>
-    </article>
-</section>
-
-<section data-jwt-tokens="{{ jwt_token }}" id="jwt_card"></section>
-
+    </div>
+</div>
+ 
+ 
+ 
 <div class="row">
-    <div class="col-md-12">
-        <table class="table table-striped table-hover table-sticky table_students">
+    <div class="col-md-12" id="assignments_container">
+        <table class="table table-striped table-hover table-sticky table_students" id="assignmentTable">
             <thead class="thead-dark">
                 <tr>
                     <th>S.NO</th>
@@ -99,57 +95,57 @@
                     <th>Action</th>
                 </tr>
             </thead>
-        
-        
-            <tbody class='tbl__bdy' id="assignments_details">
-                {% for assign in assignment %}
+ 
+            <tbody class='tbl__bdy' id="assignments_info">
+                {% if assignment_data %}
+                {% for assign in assignment_data %}
                 <tr class="tr-assign-{{assign.id}}">
-                    <td>{{forloop.counter}}</td>
-                    <td class="assignment_title">{{assign.assignment_title}}</td>
-                    <td class="class_id">{{assign.class_id}}-{{assign.section_id}}</td>
-                    <td class="assignment_Date">{{assign.assignment_Date}}</td>
-                    <td class="assignment_due_date">{{assign.assignment_due_date}}</td>
+                    <td>{{ forloop.counter }}</td>
+                    <td class="assignment_title w-25">{{ assign.assignment_title }}</td>
                     <td>
-                        <button  class="btn btn-sm btn-dark  rounded-pill openBtn" onclick="openAssignmentDetails('assignmentviewForm', '{{assign.assignment_details}}')">View </button>
+                        <span class="class_id">{{ assign.classes.class_name }}</span>-
+                        <span class="section_id">{{ assign.sections.section_name }}</span>
+                    </td>
+                    <td class="assignment_Date">{{ assign.assignment_Date }}</td>
+                    <td class="assignment_due_date">{{ assign.assignment_due_date }}</td>
+                    <td>
+                        <button type="button" class="openAssignmentBtn btn btn-sm btn-dark rounded-pill" data-bs-toggle="modal" data-bs-target="#assignment-view-modal" data-id="{{ assign.id }}" data-description="{{ assign.assignment_details }}">View</button>
                     </td>
                     <td>
-                        <a type="button" class="btn btn-sm btn-info" onclick="EditButton(this)" data-id="{{assign.id}}">
-                            <i class="bi bi-pencil-square"></i></a>
-                        <a type="button" class="btn btn-sm btn-danger" onclick="DeleteButton(this)" data-id="{{assign.id}}">
-                            <i class="bi bi-trash3"></i></a>
+                        <button type="button" class="btn btn-sm btn-info btnEdit" id="btnEdit"
+                            data-id="{{ assign.id }}">
+                            <i class="bi bi-pencil-square"></i>
+                        </button>
+                        <button type="button" class="btndelete btn btn-sm btn-danger" id="btndelete"
+                            data-id="{{ assign.id }}">
+                            <i class="bi bi-trash3"></i>
+                        </button>
                     </td>
                 </tr>
                 {% endfor %}
-    </tbody>
-  </table>
-  </div>
-  </div>
+                {% else %}
+                <tr>
+                    <td colspan="9" class="text-center" id="no_data_found">
+                        <img src="{% static 'img/no_data_found.png' %}" alt="No Data Found" class="no_data_found" id="no_data_found">
+                    </td>
+                </tr>
+            {% endif %}
+            </tbody>
+        </table>
+    </div>
+</div>
 
-
-
-  <section class="form_section bg-grey" id="assignmentviewForm">
-    <article class="container-fluid">
-        <div class="row">
-            <div class="col-xl-8"></div>
-            <div class="col-xl-4 form_div">
-                <div class="row">
-                    <div class="col-xl-6">
-                        <h4>Assigment Details</h4>
-                    </div>
-                    <div class="col-xl-6 text-end">
-                        <a class="btn-close" onclick="closeAssignmentDetails()" aria-label="Close"></a>
-                    </div>
-                </div>
-                <div id="assignmentDetailsContent"></div>
-
+<div class="modal fade bs-example-modal-md" id="assignment-view-modal" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-md">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="mySmallModalLabel">Assigment Details</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body" id="assignment-modal-body"></div>
             </div>
         </div>
-    </article>
-</section>
-
-
-
-
-
-  <script src="{% static 'app-js/assignments.js' %}"></script>
+    </div>
+</div>
+<script src="{% static 'app-js/assignments.js' %}"></script>
 {% endblock %}
