--- a/app/templates/classes.html
+++ b/app/templates/classes.html
@@ -28,25 +28,27 @@
       <div class="fields">
         <div class="input-field" id="class">
           <select class="gender-list filter" name="class" id="class_list">
-            <option value="0" selected>Select Class</option>
+            <option value="0" id="classOption" selected>Select Class</option>
             {% for data in class_data %}
             <option value="{{data.class_id}}">{{data.class_name}}</option>
             {% endfor %}
           </select>
         </div>
         <div class="input-field">
-          <button type="button" class="btn btn-info btn-label rounded-pill right" id="btnEdit" data-class-id="0">
+          <button type="button" class="btn btn-info btn-label rounded-pill right disabled-button" id="btnEdit"
+            data-class-id="0">
             <i class="bi bi-pencil-square label-icon align-middle fs-lg ms-2"></i>Edit</button>
         </div>
         <div class="input-field">
-          <button type="button" class="btn btn-danger btn-label rounded-pill right" id="btnDelete" data-class-id="0">
+          <button type="button" class="btn btn-danger btn-label rounded-pill right disabled-button" id="btnDelete"
+            data-class-id="0">
             <i class="bi bi-trash3-fill label-icon align-middle fs-lg ms-2"></i>Delete</button>
         </div>
         </h5>
       </div>
       <p class="text-muted mt-1">Records below are specific to the selected <code id="selected_class_name">None</code>.
       </p>
-      <ul class="nav nav-pills arrow-navtabs nav-success bg-light mb-3 mt-2" role="tablist">
+      <ul class="nav nav-pills arrow-navtabs nav-success bg-light mb-3 mt-2" role="tablist" style="display: none;">
         <li class="nav-item">
           <a class="nav-link active" data-bs-toggle="tab" href="#sections" role="tab">
             <span class="d-block d-sm-none"><i class="ti ti-home"></i></span>
@@ -127,93 +129,18 @@
             <h6 class="col-sm-12 col-md-6 col-xl-8">Calender/TimeTable of this class</h6>
             <div class="col-sm-12 col-md-6 col-xl-4">
               <div class="col text-end">
-
+                <select class="custom-select custom-select-lg bg-light" name="section" id="sectionByClass">
+                </select>
               </div>
             </div>
           </div>
           <div class="text-center" id="tabCalender">
             <div class="container">
               <table class="styled-table" id="calenderTable">
-                <tr>
-                  <td colspan="7" class="col" id="column">
-                    <center><b>Class 10 Section A</b></center>
-                  </td>
-                </tr>
-                <tr class="col" id="column">
-                  <th>Time</th>
-                  <th>Monday</th>
-                  <th>Tuesday</th>
-                  <th>Wednesday</th>
-                  <th>Thursday</th>
-                  <th>Friday</th>
-                  <th>Saturday</th>
 
-                </tr>
-                <tr class="rowData">
-                  <td class="mod" id="tdData">9:30 AM-10:15 AM</td>
-                  <td id="tableData">English<br>(Mr.Rizwan)</td>
-                  <td id="tableData">Math<br>(Ms.Rupa)</td>
-                  <td id="tableData">Chemistry<br>(Ms.Lipi)</td>
-                  <td id="tableData">Computer<br>(Mr.Murli)</td>
-                  <td id="tableData">biology<br>(Ms.sandhya)</td>
-                  <td id="tableData">Physics<br>(Ms.Haritha)</td>
-                </tr>
-                <tr class="rowData">
-                  <td class="mod" id="tdData">10:15 AM-11:00 AM</td>
-                  <td id="tableData">English<br>(Mr.Rizwan)</td>
-                  <td id="tableData">Math<br>(Ms.Jeshi)</td>
-                  <td id="tableData">Chemistry<br>(Ms.Lipi)</td>
-                  <td id="tableData">Computer<br>(Mr.Murli)</td>
-                  <td id="tableData">biology<br>(Ms.sandhya)</td>
-                  <td id="tableData">Physics<br>(Ms.Haritha)</td>
-                </tr>
-                <tr class="rowData">
-                  <td class="mod" id="tdData">11:15 AM-12:00 PM</td>
-                  <td id="tableData">English<br>(Mr.Rizwan)</td>
-                  <td id="tableData">Math<br>(Mr.Abhishek)</td>
-                  <td id="tableData">Chemistry<br>(Ms.Lipi)</td>
-                  <td id="tableData">Computer<br>(Mr.Murli)</td>
-                  <td id="tableData">biology<br>(Ms.janvi)</td>
-                  <td id="tableData">Physics<br>(Mr.Fasi)</td>
-                </tr>
-                <tr class="rowData">
-                  <td class="mod" id="tdData">12:00 PM-12:45 PM</td>
-                  <td id="tableData">English<br>(Mr.Rizwan)</td>
-                  <td id="tableData">Math<br>(Ms.Jeshi)</td>
-                  <td id="tableData">Chemistry<br>(Ms.Lipi)</td>
-                  <td id="tableData">Computer<br>(Mr.Murli)</td>
-                  <td id="tableData">biology<br>(Ms.sandhya)</td>
-                  <td id="tableData">Physics<br>(Ms.Haritha)</td>
-                </tr>
-                <tr class="rowData">
-                  <td class="mod" id="tdData">01:30 PM-02:15 PM</td>
-                  <td id="tableData">English<br>(Mr.Abhishek)</td>
-                  <td id="tableData">Math<br>(Ms.sandhya)</td>
-                  <td id="tableData">Chemistry<br>(Mr.Murli)</td>
-                  <td id="tableData">Computer<br>(Mr.Rizwan)</td>
-                  <td id="tableData">biology<br>(Ms.jeshi)</td>
-                  <td id="tableData">Physics<br>(Ms.Haritha)</td>
-                </tr>
-                <tr class="rowData">
-                  <td class="mod" id="tdData">02:15 PM-03:00 PM</td>
-                  <td id="tableData">English<br>(Mr.Rizwan)</td>
-                  <td id="tableData">Math<br>(Ms.Jeshi)</td>
-                  <td id="tableData">Chemistry<br>(Ms.Lipi)</td>
-                  <td id="tableData">Computer<br>(Mr.Murli)</td>
-                  <td id="tableData">biology<br>(Ms.sandhya)</td>
-                  <td id="tableData">Physics<br>(Ms.Haritha)</td>
-                </tr>
-                <tr class="rowData">
-                  <td class="mod" id="tdData">3:00 PM-03:30 PM</td>
-                  <td id="tableData">English<br>(Mr.Rizwan)</td>
-                  <td id="tableData">Math<br>(Mr.Abhishek)</td>
-                  <td id="tableData">Chemistry<br>(Ms.Lipi)</td>
-                  <td id="tableData">Computer<br>(Mr.Murli)</td>
-                  <td id="tableData">biology<br>(Ms.janvi)</td>
-                  <td id="tableData">Physics<br>(Mr.Fasi)</td>
-                </tr>
               </table>
             </div>
+            <img src="/assets/img/no_data_found.png" class="no_data_found">
           </div>
         </div>
         <div class="tab-pane" id="students" role="tabpanel">
@@ -221,28 +148,27 @@
             <h6 class="col-sm-12 col-md-6 col-xl-8">List of Students of this class</h6>
           </div>
           <div class="text-center" id="tabStudent">
-            <table class="table table-striped table-hover table-sticky table_students">
-              <thead class="thead-dark">
-                <tr>
-                  <th>S.No</th>
-                  <th>Student Name</th>
-                  <th>Roll Number</th>
-                  <th>Class </th>
-                  <th>Section</th>
-                  <th>Gender</th>
-                  <th>Blood Group</th>
-                </tr>
-              </thead>
-              <tbody class="tbl__bdy" id="classStudentTable">
 
-              </tbody>
-            </table>
           </div>
         </div>
         <div class="tab-pane" id="examinations" role="tabpanel">
-          <h6>Past and Upcoming Examinations of this class</h6>
-          <div class="text-center">
-            <img src="/assets/img/no_data_found.png" class="no_data_found">
+          <div class="row">
+            <h6 class="col-sm-12 col-md-6 col-xl-8">Past and Upcoming Examinations of this class</h6>
+            <div class="col-sm-12 col-md-6 col-xl-4">
+              <div class="col text-end">
+                <button type="button" class="btn btn-success btn-label rounded-pill right" data-bs-toggle="modal"
+                  data-bs-target="#exam_creation_modal">
+                  <i class="bi bi-plus-circle label-icon align-middle fs-lg ms-2"></i>Add New Examination</button>
+              </div>
+            </div>
+          </div>
+          <div class="text-center" id="tabExam">
+            <div id="upcomingExamination">
+
+            </div>
+            <div id="pastExamination">
+
+            </div>
           </div>
         </div>
         <div class="tab-pane" id="gradings" role="tabpanel">
@@ -302,8 +228,7 @@
       <div class="modal-footer">
         <a href="javascript:void(0);" class="btn btn-link link-success fw-medium" data-bs-dismiss="modal"><i
             class="ri-close-line me-1 align-middle"></i> Close</a>
-        <button type="submit" class="btn btn-primary" id="btnSave" data-bs-dismiss="modal">Save
-          changes</button>
+        <button type="submit" class="btn btn-primary" id="btnSave">Save</button>
       </div>
     </div><!-- /.modal-content -->
   </div><!-- /.modal-dialog -->
@@ -343,8 +268,7 @@
       <div class="modal-footer">
         <a href="javascript:void(0);" class="btn btn-link link-success fw-medium" data-bs-dismiss="modal"><i
             class="ri-close-line me-1 align-middle"></i> Close</a>
-        <button type="submit" class="btn btn-primary" id="btnSectionSave">
-          Save changes</button>
+        <button type="submit" class="btn btn-primary" id="btnSectionSave">Save</button>
       </div>
     </div><!-- /.modal-content -->
   </div><!-- /.modal-dialog -->
@@ -383,16 +307,15 @@
       <div class="modal-footer">
         <a href="javascript:void(0);" class="btn btn-link link-success fw-medium" data-bs-dismiss="modal"><i
             class="ri-close-line me-1 align-middle"></i> Close</a>
-        <button type="submit" class="btn btn-primary" id="btnSujectSave">Save
-          changes</button>
+        <button type="submit" class="btn btn-primary" id="btnSujectSave">Save</button>
       </div>
     </div><!-- /.modal-content -->
   </div><!-- /.modal-dialog -->
 </div>
-
-<div class="modal fade bs-example-modal-sm" id="grade_creation_modal" tabindex="-1" role="dialog"
-  aria-labelledby="mySmallModalLabel" aria-hidden="true">
-  <div class="modal-dialog modal-sm">
+<!-- ______AddGrade Form_____-->
+<div class="modal fade" id="grade_creation_modal" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel"
+  aria-hidden="true">
+  <div class="modal-dialog">
     <div class="modal-content" id="grade-form-area">
       <div class="modal-header">
         <h5 class="modal-title" id="mySmallModalLabel">Save Grading</h5>
@@ -409,35 +332,108 @@
               cohorts, each following a curriculum appropriate for their developmental stage. </p>
           </div>
         </div>
-        <div class="d-flex mt-2">
+        <div class="d-flex mt-2 row">
           <div class="col-md-6 form-content">
-            <label for="percent_from" class="form-label">Minimum Percent(%)</label>
+            <label for="percent_from" class="form-label">Minimum Percentage(%)</label>
             <input type="number" class="form-control percent_from" id="percent_from" name="percent_from"
-              placeholder="Enter minimum percentage" min="0" max="100">
+              placeholder="Enter Minimum Percentage" min="0" max="100">
           </div>
-        </div>
-        <div class="d-flex mt-2">
-          <div class="col-md-12 form-content">
-            <label for="percent_upto" class="form-label">Maximum Percent(%)</label>
+          <div class="col-md-6 form-content">
+            <label for="percent_upto" class="form-label">Maximum Percentage(%)</label>
             <input type="number" class="form-control percent_upto" id="percent_upto" name="percent_upto"
-              placeholder="Enter maximum percentage" min="0" max="100">
+              placeholder="Enter Maximum Percentage" min="0" max="100">
           </div>
         </div>
+
         <div class="d-flex mt-2">
           <div class="col-md-12 form-content">
             <input type="hidden" name="grade_id" id="grade_id">
             <input type="hidden" name="id" id="applicable_id">
             <label for="grade_name" class="form-label">Grade Name</label>
             <input type="text" class="form-control grade_name" id="grade_name" name="grade_name"
-              placeholder="Enter a Subject Name" maxlength="1000">
+              placeholder="Enter a Grade Name" maxlength="1000">
           </div>
         </div>
       </div>
       <div class="modal-footer">
         <a href="javascript:void(0);" class="btn btn-link link-success fw-medium" data-bs-dismiss="modal"><i
             class="ri-close-line me-1 align-middle"></i> Close</a>
-        <button type="submit" class="btn btn-primary" id="btnGradeSave">Save
-          changes</button>
+        <button type="submit" class="btn btn-primary" id="btnGradeSave">Save</button>
+      </div>
+    </div><!-- /.modal-content -->
+  </div><!-- /.modal-dialog -->
+</div>
+<!-- ______AddExam Form_____-->
+<div class="modal fade" id="exam_creation_modal" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel"
+  aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content" id="exam-form-area">
+      <div class="modal-header">
+        <h5 class="modal-title" id="mySmallModalLabel">Save Examination</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">
+        </button>
+      </div>
+      <div class="modal-body" id="AddExam">
+        <div class="d-flex">
+          <div class="flex-shrink-0">
+            <i class="ri-checkbox-circle-fill text-success"></i>
+          </div>
+          <div class="flex-grow-1 ms-2">
+            <p class="text-muted mb-0"> An examination or test is an educational assessment intended to measure a
+              test-taker's knowledge, skill, aptitude, or classification in many other topics.</p>
+          </div>
+        </div>
+        <div class="d-flex mt-2 row">
+          <div class="col-md-4 form-content">
+            <label for="start_date" class="form-label">Start Date</label>
+            <input type="date" class="form-control start_date" id="start_date" name="start_date">
+          </div>
+          <div class="col-md-4 form-content">
+            <label for="end_date" class="form-label">End Date</label>
+            <input type="date" class="form-control end_date" id="end_date" name="end_date">
+          </div>
+          <div class="col-md-4 form-content">
+            <label for="result_date" class="form-label">Result Date</label>
+            <input type="date" class="form-control result_date" id="result_date" name="result_date">
+          </div>
+        </div>
+        <div class="d-flex mt-2">
+          <div class="col-md-12 form-content">
+            <input type="hidden" name="parent_exam_id" id="parent_exam_id">
+            <input type="hidden" name="exam_id" id="exam_id">
+            <input type="hidden" id="exams_id">
+            <label for="parent_exam_name" class="form-label">Name of the Examination</label>
+            <input type="text" class="form-control parent_exam_name" id="parent_exam_name" name="parent_exam_name"
+              placeholder="Enter a Exam Name" maxlength="1000">
+          </div>
+        </div>
+        <div class="d-flex mt-2">
+          <div class="col-md-12 form-content">
+            <label for="classesId" class="form-label">Class</label>
+            <input type="text" class="form-control class_id" id="classesId" name="class_id" readonly>
+          </div>
+        </div>
+        <div class="d-flex mt-2">
+          <div class="col-md-12 form-content">
+            <table id="subjectTable">
+              <thead>
+                <th class="form-label">Subject</th>
+                <th class="form-label">Full Mark</th>
+                <th class="form-label">Action</th>
+              </thead>
+              <tbody id="subData">
+                <tr id="subRow">
+
+                </tr>
+              </tbody>
+            </table>
+          </div>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <a href="javascript:void(0);" class="btn btn-link link-success fw-medium" data-bs-dismiss="modal"><i
+            class="ri-close-line me-1 align-middle"></i> Close</a>
+        <button type="submit" class="btn btn-primary" id="btnExamSave">Save</button>
       </div>
     </div><!-- /.modal-content -->
   </div><!-- /.modal-dialog -->
