--- a/app/templates/notice.html
+++ b/app/templates/notice.html
@@ -23,45 +23,47 @@
 <section data-jwt-tokens="{{ jwt_token }}" id="jwt_card"></section>
 <div class="row">
     <div class="col-xl-12">
-        {% if notices %}
 <table class="table table-striped table-hover table-sticky table_students" id="noticeTable">
     <thead class="thead-dark">
         <tr >
-        <th>Notice Number</th>
-        <th>Notice Title</th>
-        <th>Notice Date</th>
-        <th>Due Date</th>
-        <th>Notice Description</th>
-        <th>Recipient</th>
-        <th>Announced by</th>
-        <th>Action</th>
+            <th>Notice Number</th>
+            <th>Notice Title</th>
+            <th>Notice Date</th>
+            <th>Due Date</th>
+            <th>Notice Description</th>
+            <th>Recipient</th>
+            <th>Announced by</th>
+            <th>Action</th>
         </tr>
     </thead>
     <tbody class="tbl__bdy" id="notice_details">
+        {% if notices %}
             {% for notice in notices %}
             <tr class="tr-notice-{{notice.notice_id}}">
-            <td>{{forloop.counter}}</td>
-            <td class="notice_title">{{notice.notice_title}}</td>
-            <td class="notice_date">{{notice.notice_date}}</td>
-            <td class="due_date">{{notice.due_date}}</td>
-            <td>    
-                <button type="button" class="btn btn-sm btn-dark rounded-pill openBtn" data-bs-toggle="modal" data-bs-target="#notice-view-modal" data-id="{{notice.notice_id}}" data-title="{{notice.notice_title}}" data-description="{{notice.notice_description}}">View</button>
-            </td>
-            <td class="recipient">{{notice.recipient}}</td>
-            <td class="announced_by">{{notice.notice_announced_by}}</td>
-            <td>
-                <a href="{% url 'notice_edit' notice.notice_id %}" data-id="{{notice.notice_id}}" class="btnNoticeEdit btn btn-sm btn-info"><i class="bi bi-pencil-square"></i></a>
-                <a href="#" data-id="{{notice.notice_id}}" class="dltBtn btn btn-sm btn-danger"><i class="bi bi-trash3"></i></a>
-            </td>
+                <td>{{forloop.counter}}</td>
+                <td class="notice_title">{{notice.notice_title}}</td>
+                <td class="notice_date">{{notice.notice_date}}</td>
+                <td class="due_date">{{notice.due_date}}</td>
+                <td>    
+                    <button type="button" class="btn btn-sm btn-dark rounded-pill openBtn" data-bs-toggle="modal" data-bs-target="#notice-view-modal" data-id="{{notice.notice_id}}" data-title="{{notice.notice_title}}" data-description="{{notice.notice_description}}">View</button>
+                </td>
+                <td class="recipient">{{notice.recipient}}</td>
+                <td class="announced_by">{{notice.notice_announced_by}}</td>
+                <td>
+                    <a href="{% url 'notice_edit' notice.notice_id %}" data-id="{{notice.notice_id}}" class="btnNoticeEdit btn btn-sm btn-info"><i class="bi bi-pencil-square"></i></a>
+                    <a href="#" data-id="{{notice.notice_id}}" class="dltBtn btn btn-sm btn-danger"><i class="bi bi-trash3"></i></a>
+                </td>
             </tr>                     
             {% endfor %}
+        {% else %}
+            <tr class="no_data_found-tr">
+                <td colspan="8" class="text-center ">
+                    <img src="{% static 'img/no_data_found.png' %}" alt="No Image" class="no_data_found">
+                </td>
+            </tr>
+        {% endif %}
     </tbody>
 </table>
-{% else %}
-            <div class="col-md-12 text-center">
-                <img src="{% static "img/no_data_found.png" %}" alt="noImage" class="no_data_found"/>
-            </div>
-        {% endif %}
 </div>
 </div>
 </section>
