--- a/app/templates/register_staff.html
+++ b/app/templates/register_staff.html
@@ -56,9 +56,9 @@
                                                 name="joining_date" value="{{staff_data.joining_date}}">
                                         </div>
                                         <div class="col-md-6">
-                                            <label for="photo" class="form-label">Photo</label>
+                                            <label for="staffPhoto" class="form-label">Photo</label>
                                             <input type="file" accept=".pdf,.jpg,.jpeg" placeholder="Seletct File"
-                                                class="form-control" id="photo" name="photo">
+                                                class="form-control" id="staffPhoto" name="staffPhoto">
                                         </div>
                                     </div>
                                     <div class="row">
