--- a/app/templates/students.html
+++ b/app/templates/students.html
@@ -41,7 +41,7 @@
                     <table class="table table-striped table-hover table-sticky table_students" id="studentsTable">
                         <thead class="thead-dark">
                             <tr>
-                                <th>S.No</th>
+                                <th>Img</th>
                                 <th>Student Name</th>
                                 <th>Roll Number</th>
                                 <th>Class </th>
@@ -51,16 +51,19 @@
                                 <th>Student Action</th>
                             </tr>
                         </thead>
-                        <tbody class="tbl__bdy">
+                        <tbody class="tbl__bdy" id="studentTable">
+                        {% if student_data %}
                             {% for student in student_data %}
                             <tr class="tr-student-{{student.student_id}}">
-                                <td>{{forloop.counter}}</td>
+                                <td>
+                                    <img src="{{student.photo}}" alt="" srcset="" with="50px" height="50px">
+                                </td>
                                 <td class="student_name">
-                                    <a href="{% url 'student_info' student.slug %}" class="text-dark">{{student.student_name}}</a>
+                                    <a href="{% url 'student_info' student.slug %}" >{{student.student_name}}</a>
                                 </td>
                                 <td class="roll_number">{{ student.roll_number }}</td>
-                                <td class="class_id">{{ student.class_id }}</td>
-                                <td class="section_id">{{ student.section_id }}</td>
+                                <td class="class_id">{{ student.classes.class_name }}</td>
+                                <td class="section_id">{{ student.sections.section_name }}</td>
                                 <td class="gender">{{ student.gender }}</td>
                                 <td class="blood_group">{{ student.blood_group }}</td>
                                 <td>
@@ -73,6 +76,15 @@
                                 </td>
                             </tr>
                             {% endfor %}
+                        {% else %}
+                            <tr class="no_data_found-tr">
+                                <td colspan="8" class="text-center">
+                                    <img src="{% static 'img/no_data_found.png' %}" alt="No Image" class="no_data_found">
+                                </td>
+                            </tr>
+                        {% endif %}
+
+
                         </tbody>
                     </table>
             </div>
