--- a/app/templates/staffs.html
+++ b/app/templates/staffs.html
@@ -42,7 +42,6 @@
 <!-- Staff table start -->
 <section class="row">
     <div class="col-md-12 text-center">
-        {% if staff_data %}
             <table class="table table-striped table-hover table-sticky table_students" id="staffTable">
                 <thead class="thead-dark">
                     <tr>
@@ -57,10 +56,13 @@
                         <th>Staff Action</th>
                     </tr>
                 </thead>
-                <tbody class="tbl__bdy">
+                <tbody class="tbl__bdy" id="staffTable">
+                {% if staff_data %}
                     {% for staff in staff_data %}
                     <tr class="tr-staff-{{staff.staff_id}}">
-                        <td>{{forloop.counter}}</td>
+                        <td>
+                            <img src="{{staff.photo}}" alt="" srcset="" height="50px" width="50px">
+                        </td>
                         <td class="staff_name">
                             <a href="{% url 'staff_info' staff.slug %}" class="text-dark"> {{ staff.staff_name }} </a>
                         </td> 
