--- a/assets/app-css/classes.css
+++ b/assets/app-css/classes.css
@@ -1,8 +1,11 @@
 
 #card2{
-    width: 15rem;
+    width: 16.5rem;
     font-size: 1.1rem;
     color: #000;
+}
+.section3{
+    text-align: left;
 }
 .line-section{
     width: 10%;
@@ -48,15 +51,16 @@
     #column{
         background-color:rgb(251 233 170);
         height: 2.5rem;
-        
+        border: 1px solid rgb(198, 212, 215);
+        text-align:center;
     }
   #tdData{
     background-color: #fdf4d7;
+    border: 1px solid rgb(198, 212, 215);
    }
 
 #calenderTable, #tableData {
     padding: 12px;
-    text-align: left;
     background-color: whitesmoke; 
     border: 3px solid;
     border: 1px solid rgb(198, 212, 215);
@@ -64,16 +68,55 @@
 
 #calenderTable,.rowData {
     background-color: rgb(198, 212, 215);
+    text-align: center;
 }
 @media only screen and (max-width: 768px) {
     table {
         width: 90%;
     }
 }
-
+#examDelete{
+    margin-left: 8px;
+}
 #tabContent {
    display: none;
 }
 #class_list{
     min-width: 250px !important;
 }
+#sectionByClass{
+  width: 8.5rem;
+  border: none;
+  height: 2rem;
+  padding: 0 0.5rem;
+}
+#subject_Input{
+  width: 5rem;
+  text-align: center;
+}
+#subjectTable{
+    width: 100%;
+}
+#subjectTable th td{
+    padding: 1rem;
+    text-align: center;
+}
+.examHeading{
+    text-align: left;
+}
+.studetImage{
+    width: 3rem;
+    height: 3rem;
+}
+.disabled-button {
+    background-color: grey !important;
+    border: 1px solid grey !important;
+    cursor: not-allowed !important;
+    pointer-events: auto !important;
+}
+  .enabled-button {
+    background-color: '' !important;
+    border: 1px solid '' !important;
+    cursor: pointer !important;
+  }
+  
